# cs599-project

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/eval/: benchmark.json  results.json
data/processed/: chunks.jsonl  documents_index.json  retrieval_index.json  topics_manifest.json  vector_index.json
data/raw/: aliyun_oss_docs.json
docs/: CS599_大作业报告.docx  api_spec.md  architecture.md  evaluation_report.md  layout_update_summary.md  product_spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
scripts/: build_kb.py  check_models.py  evaluate.py  make_report_docx.py
src/aliyun_oss_rag/: __init__.py  agent.py  api.py  config.py  data_loader.py  embeddings.py  llm.py  model_checks.py  retrieval.py  schemas.py  tools.py
tests/: conftest.py  test_agent.py  test_api.py  test_knowledge_base_quality.py  test_llm.py  test_llm_config.py  test_model_checks.py  test_retrieval.py
