[project]
name = "aliyun-oss-rag-agent"
version = "0.1.0"
description = "Aliyun OSS technical support RAG Agent for CS599 final project."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.115.6",
    "langgraph>=0.2.70",
    "pydantic>=2.10.4",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aliyun_oss_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
